# skillduck

./: CONTRIBUTING.md  LICENSE  README.md  SITEMAP.md  index.html  install.sh  package-lock.json  package.json  uninstall.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
docs/: RELEASE.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: agents.rs  cli_bridge.rs  editor.rs  mod.rs  sandbox.rs  settings.rs  skills.rs  updater.rs  watcher.rs
src/components/layout/: AppUpdateBanner.tsx  Shell.tsx  Sidebar.tsx  StatusBar.tsx
src/components/skills/: AddSkillDialog.tsx  SkillCard.tsx  SkillDetail.tsx
src/hooks/: useAppUpdate.ts  useStore.ts  useUpdates.ts
src/lib/: tauri.ts
src/pages/: AgentsPage.tsx  EditorPage.tsx  ExplorePage.tsx  SandboxPage.tsx  SettingsPage.tsx  SkillsPage.tsx
src/types/: skills.ts
