[package]
name = "skills-dashboard"
version = "0.1.0"
description = "Agent Skills Dashboard - Visual GUI for vercel-labs/skills"
authors = ["Skills Dashboard"]
edition = "2021"

[lib]
name = "skills_dashboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
walkdir = "2"
notify = "7"
tempfile = "3"
dirs = "6"
gray_matter = "0.2"
regex = "1"
lazy_static = "1"

