[package]
name = "skillduck"
version = "0.1.3"
description = "SkillDuck - Visual GUI for vercel-labs/skills"
authors = ["SkillDuck"]
edition = "2021"

[lib]
name = "skillduck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
walkdir = "2"
notify = "7"
tempfile = "3"
dirs = "6"
gray_matter = "0.2"
regex = "1"
lazy_static = "1"

